<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <Button
            android:id="@+id/btn_regback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="25sp"
            android:textColor="@color/toolbar2"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background13">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/et_reguser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintZh"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/et_regnick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/et_regpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hintPWD"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_pwd"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/et_regrepwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="10dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthDate"
                android:textStyle="bold"
                android:textSize="20sp"/>
                <TextView
                android:id="@+id/tv_rege_birth"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btn_rege_birth"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:background="@drawable/icon_birth"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <EditText
                android:id="@+id/et_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/verify"
                android:textSize="20sp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/image_verify"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:onClick="onClick"
                android:layout_weight="1"/>
        </LinearLayout>
    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:background="@drawable/shape_btn2"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/reminder"
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_marginLeft="28dp"
         android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>
