<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_account"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="25sp"
            android:textColor="@color/toolbar2"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:layout_margin="10dp"
        android:padding="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_add"/>
        <TextView
            android:id="@+id/tv_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_or_register"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="20dp">
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="20sp"
            android:gravity="center"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>
