<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background8"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/head"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>
        <LinearLayout
            android:id="@+id/linear_blogNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:onClick="onClick">
            <TextView
                android:id="@+id/tv_blogNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blog_num"
                android:textSize="15sp"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_marginTop="25dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_account"/>
        <TextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_set"/>
        <TextView
            android:id="@+id/tv_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_info"/>
        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>
