<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="25sp"
            android:textColor="@color/toolbar2"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_head"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/head_info"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/head"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/icon_nicke"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/icon_gender"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/sp_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/icon_gift"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthDate"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_birthday"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/icon_individual"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/individual"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_indiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"/>
</LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="20dp">-->
        <!--<Button-->
            <!--android:id="@+id/btn_upload"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="19sp"-->
            <!--android:text="@string/upload"-->
            <!--android:background="@drawable/shape_btn"/>-->
    <!--</LinearLayout>-->
</LinearLayout>
