<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/linear_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/icon_blog"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_blog_press"/>
            <TextView
                android:id="@+id/tv_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blog"
                android:textStyle="bold"
                android:textColor="#67CCFF"
                android:clickable="true"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/icon_find"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_find"/>
            <TextView
                android:id="@+id/tv_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/find"
                android:textStyle="bold"
                android:textColor="#B7B7B7"
                android:clickable="true"/>
        </LinearLayout>
        <LinearLayout
        android:id="@+id/linear_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/icon_mine"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_user"/>
        <TextView
            android:id="@+id/tv_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mine"
            android:textStyle="bold"
            android:textColor="#B7B7B7"
            android:clickable="true"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
